config/metrics/metrics-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - metrics.kbs.com
    secretName: ingress-secret
  rules:
    - host: metrics.kbs.com
      http:
        paths:
        - path: /
          backend:
            serviceName: metrics-server
            servicePort: 443
